Refactor GitHub Actions workflow for deployment

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,31 +3,24 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main # Set this to your primary branch
+      - main # Set a branch to deploy from
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout your repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          node-version: '20' # Or your desired Node.js version
+          path: './src' # The directory containing your static files
 
-      - name: Navigate to src folder and install dependencies 🔧
-        run: |
-          cd src
-          npm install
-
-      - name: Navigate to src folder and build project 🏗️
-        run: |
-          cd src
-          npm run build
-
-      - name: Deploy to GitHub Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: src/dist # The folder the action should deploy
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
